PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) char* __stdcall DPLGetAnnotEmbeddedFileToString(int instanceID, int Index, int Options);
__declspec(dllimport) int __stdcall DPLGetAnnotIntProperty(int instanceID, int Index, int Tag);
__declspec(dllimport) int __stdcall DPLGetAnnotQuadCount(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetAnnotQuadPoints(int instanceID, int Index, int QuadNumber, int PointNumber);
__declspec(dllimport) int __stdcall DPLGetAnnotSoundToFile(int instanceID, int Index, int Options, wchar_t * SoundFileName);
__declspec(dllimport) int __stdcall DPLGetAnnotSoundToFileA(int instanceID, int Index, int Options, char * SoundFileName);
__declspec(dllimport) char* __stdcall DPLGetAnnotSoundToString(int instanceID, int Index, int Options);
__declspec(dllimport) wchar_t* __stdcall DPLGetAnnotStrProperty(int instanceID, int Index, int Tag);
__declspec(dllimport) char* __stdcall DPLGetAnnotStrPropertyA(int instanceID, int Index, int Tag);
__declspec(dllimport) double __stdcall DPLGetBarcodeWidth(int instanceID, double NominalWidth, wchar_t * Text, int Barcode);
__declspec(dllimport) double __stdcall DPLGetBarcodeWidthA(int instanceID, double NominalWidth, char * Text, int Barcode);
__declspec(dllimport) wchar_t* __stdcall DPLGetBaseURL(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetBaseURLA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetCSDictEPSG(int instanceID, int CSDictID);
__declspec(dllimport) int __stdcall DPLGetCSDictType(int instanceID, int CSDictID);
__declspec(dllimport) wchar_t* __stdcall DPLGetCSDictWKT(int instanceID, int CSDictID);
__declspec(dllimport) char* __stdcall DPLGetCSDictWKTA(int instanceID, int CSDictID);
__declspec(dllimport) HDC __stdcall DPLGetCanvasDC(int instanceID, int CanvasWidth, int CanvasHeight);
__declspec(dllimport) int __stdcall DPLGetCanvasDCEx(int instanceID, int CanvasWidth, int CanvasHeight, int ReferenceDC);
__declspec(dllimport) wchar_t* __stdcall DPLGetCatalogInformation(int instanceID, wchar_t * Key);
__declspec(dllimport) char* __stdcall DPLGetCatalogInformationA(int instanceID, char * Key);
__declspec(dllimport) char* __stdcall DPLGetContentStreamToString(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetCustomInformation(int instanceID, wchar_t * Key);
__declspec(dllimport) char* __stdcall DPLGetCustomInformationA(int instanceID, char * Key);
__declspec(dllimport) wchar_t* __stdcall DPLGetCustomKeys(int instanceID, int Location);
__declspec(dllimport) char* __stdcall DPLGetCustomKeysA(int instanceID, int Location);
__declspec(dllimport) wchar_t* __stdcall DPLGetDefaultPrinterName(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetDefaultPrinterNameA(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetDestName(int instanceID, int DestID);
__declspec(dllimport) char* __stdcall DPLGetDestNameA(int instanceID, int DestID);
__declspec(dllimport) int __stdcall DPLGetDestPage(int instanceID, int DestID);
__declspec(dllimport) int __stdcall DPLGetDestType(int instanceID, int DestID);
__declspec(dllimport) double __stdcall DPLGetDestValue(int instanceID, int DestID, int ValueKey);
__declspec(dllimport) wchar_t* __stdcall DPLGetDocJavaScript(int instanceID, wchar_t * ActionType);
__declspec(dllimport) char* __stdcall DPLGetDocJavaScriptA(int instanceID, char * ActionType);
__declspec(dllimport) wchar_t* __stdcall DPLGetDocumentFileName(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetDocumentFileNameA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetDocumentFileSize(int instanceID);
__declspec(dllimport) int __stdcall DPLGetDocumentID(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetDocumentIdentifier(int instanceID, int Part, int Options);
__declspec(dllimport) char* __stdcall DPLGetDocumentIdentifierA(int instanceID, int Part, int Options);
__declspec(dllimport) wchar_t* __stdcall DPLGetDocumentMetadata(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetDocumentMetadataA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetDocumentRepaired(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetDocumentResourceList(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetDocumentResourceListA(int instanceID);
__declspec(dllimport) int __stdcall DPLGetEmbeddedFileContentToFile(int instanceID, int Index, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLGetEmbeddedFileContentToFileA(int instanceID, int Index, char * FileName);
__declspec(dllimport) char* __stdcall DPLGetEmbeddedFileContentToString(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetEmbeddedFileID(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetEmbeddedFileIntProperty(int instanceID, int Index, int Tag);
__declspec(dllimport) wchar_t* __stdcall DPLGetEmbeddedFileStrProperty(int instanceID, int Index, int Tag);
__declspec(dllimport) char* __stdcall DPLGetEmbeddedFileStrPropertyA(int instanceID, int Index, int Tag);
__declspec(dllimport) wchar_t* __stdcall DPLGetEncryptionFingerprint(int instanceID);
__declspec(dllimport) char* __stdcall DPLGetEncryptionFingerprintA(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLGetFileMetadata(int instanceID, wchar_t * InputFileName, wchar_t * Password);
__declspec(dllimport) char* __stdcall DPLGetFileMetadataA(int instanceID, char * InputFileName, char * Password);
__declspec(dllimport) int __stdcall DPLGetFirstChildOutline(int instanceID, int OutlineID);
__declspec(dllimport) int __stdcall DPLGetFirstOutline(int instanceID);
__declspec(dllimport) int __stdcall DPLGetFontEncoding(int instanceID);
__declspec(dllimport) int __stdcall DPLGetFontFlags(int instanceID, int FontFlagItemID);
__declspec(dllimport) int __stdcall DPLGetFontID(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFontIsEmbedded(int instanceID);
__declspec(dllimport) int __stdcall DPLGetFontIsSubsetted(int instanceID);
__declspec(dllimport) int __stdcall DPLGetFontMetrics(int instanceID, int MetricType);
__declspec(dllimport) int __stdcall DPLGetFontObjectNumber(int instanceID);
__declspec(dllimport) int __stdcall DPLGetFormFieldActionID(int instanceID, int Index, wchar_t * TriggerEvent);
__declspec(dllimport) int __stdcall DPLGetFormFieldActionIDA(int instanceID, int Index, char * TriggerEvent);
__declspec(dllimport) int __stdcall DPLGetFormFieldAlignment(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldAnnotFlags(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetFormFieldBackgroundColor(int instanceID, int Index, int ColorComponent);
__declspec(dllimport) int __stdcall DPLGetFormFieldBackgroundColorType(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetFormFieldBorderColor(int instanceID, int Index, int ColorComponent);
__declspec(dllimport) int __stdcall DPLGetFormFieldBorderColorType(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetFormFieldBorderProperty(int instanceID, int Index, int PropKey);
__declspec(dllimport) int __stdcall DPLGetFormFieldBorderStyle(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetFormFieldBound(int instanceID, int Index, int Edge);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldCaption(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldCaptionA(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldCaptionEx(int instanceID, int Index, int StringType);
__declspec(dllimport) char* __stdcall DPLGetFormFieldCaptionExA(int instanceID, int Index, int StringType);
__declspec(dllimport) int __stdcall DPLGetFormFieldCheckStyle(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldChildTitle(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldChildTitleA(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLGetFormFieldChoiceType(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetFormFieldColor(int instanceID, int Index, int ColorComponent);
__declspec(dllimport) int __stdcall DPLGetFormFieldComb(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetFormFieldDefaultValue(int instanceID, int Index);
__declspec(dllimport) char* __stdcall DPLGetFormFieldDefaultValueA(int instanceID, int Index);