PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

Public Declare Function DPLGetAnnotEmbeddedFileToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotEmbeddedFileToString" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetAnnotIntProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotIntProperty" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iTag As Long) As Long
Public Declare Function DPLGetAnnotQuadCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotQuadCount" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetAnnotQuadPoints LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotQuadPoints" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iQuadNumber As Long, _
  ByVal iPointNumber As Long) As Double
Public Declare Function DPLGetAnnotSoundToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotSoundToFileA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iOptions As Long, _
  ByVal sSoundFileName As String) As Long
Public Declare Function DPLGetAnnotSoundToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotSoundToString" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetAnnotStrProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotStrPropertyA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iTag As Long) As String
Public Declare Function DPLGetBarcodeWidth LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetBarcodeWidthA" ( _
  ByVal iInstanceID As Long, ByVal dNominalWidth As Double, _
  ByVal sText As String, ByVal iBarcode As Long) As Double
Public Declare Function DPLGetBaseURL LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetBaseURLA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetCSDictEPSG LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCSDictEPSG" ( _
  ByVal iInstanceID As Long, ByVal iCSDictID As Long) As Long
Public Declare Function DPLGetCSDictType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCSDictType" ( _
  ByVal iInstanceID As Long, ByVal iCSDictID As Long) As Long
Public Declare Function DPLGetCSDictWKT LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCSDictWKTA" ( _
  ByVal iInstanceID As Long, ByVal iCSDictID As Long) As String
Public Declare Function DPLGetCanvasDC LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCanvasDC" ( _
  ByVal iInstanceID As Long, ByVal iCanvasWidth As Long, _
  ByVal iCanvasHeight As Long) As Long
Public Declare Function DPLGetCanvasDCEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCanvasDCEx" ( _
  ByVal iInstanceID As Long, ByVal iCanvasWidth As Long, _
  ByVal iCanvasHeight As Long, ByVal iReferenceDC As Long) As Long
Public Declare Function DPLGetCatalogInformation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCatalogInformationA" ( _
  ByVal iInstanceID As Long, ByVal sKey As String) As String
Public Declare Function DPLGetContentStreamToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetContentStreamToString" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetCustomInformation LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCustomInformationA" ( _
  ByVal iInstanceID As Long, ByVal sKey As String) As String
Public Declare Function DPLGetCustomKeys LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetCustomKeysA" ( _
  ByVal iInstanceID As Long, ByVal iLocation As Long) As String
Public Declare Function DPLGetDefaultPrinterName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDefaultPrinterNameA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetDestName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDestNameA" ( _
  ByVal iInstanceID As Long, ByVal iDestID As Long) As String
Public Declare Function DPLGetDestPage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDestPage" ( _
  ByVal iInstanceID As Long, ByVal iDestID As Long) As Long
Public Declare Function DPLGetDestType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDestType" ( _
  ByVal iInstanceID As Long, ByVal iDestID As Long) As Long
Public Declare Function DPLGetDestValue LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDestValue" ( _
  ByVal iInstanceID As Long, ByVal iDestID As Long, _
  ByVal iValueKey As Long) As Double
Public Declare Function DPLGetDocJavaScript LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocJavaScriptA" ( _
  ByVal iInstanceID As Long, ByVal sActionType As String) As String
Public Declare Function DPLGetDocumentFileName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentFileNameA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetDocumentFileSize LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentFileSize" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetDocumentID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetDocumentIdentifier LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentIdentifierA" ( _
  ByVal iInstanceID As Long, ByVal iPart As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetDocumentMetadata LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentMetadataA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetDocumentRepaired LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentRepaired" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetDocumentResourceList LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetDocumentResourceListA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetEmbeddedFileContentToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEmbeddedFileContentToFileA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sFileName As String) As Long
Public Declare Function DPLGetEmbeddedFileContentToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEmbeddedFileContentToString" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetEmbeddedFileID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEmbeddedFileID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetEmbeddedFileIntProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEmbeddedFileIntProperty" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iTag As Long) As Long
Public Declare Function DPLGetEmbeddedFileStrProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEmbeddedFileStrPropertyA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iTag As Long) As String
Public Declare Function DPLGetEncryptionFingerprint LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetEncryptionFingerprintA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLGetFileMetadata LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFileMetadataA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String) As String
Public Declare Function DPLGetFirstChildOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFirstChildOutline" ( _
  ByVal iInstanceID As Long, ByVal iOutlineID As Long) As Long
Public Declare Function DPLGetFirstOutline LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFirstOutline" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFontEncoding LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontEncoding" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFontFlags LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontFlags" ( _
  ByVal iInstanceID As Long, ByVal iFontFlagItemID As Long) As Long
Public Declare Function DPLGetFontID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFontIsEmbedded LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontIsEmbedded" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFontIsSubsetted LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontIsSubsetted" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFontMetrics LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontMetrics" ( _
  ByVal iInstanceID As Long, ByVal iMetricType As Long) As Long
Public Declare Function DPLGetFontObjectNumber LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFontObjectNumber" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLGetFormFieldActionID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldActionIDA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal sTriggerEvent As String) As Long
Public Declare Function DPLGetFormFieldAlignment LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldAlignment" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldAnnotFlags LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldAnnotFlags" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldBackgroundColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBackgroundColor" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iColorComponent As Long) As Double
Public Declare Function DPLGetFormFieldBackgroundColorType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBackgroundColorType" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldBorderColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBorderColor" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iColorComponent As Long) As Double
Public Declare Function DPLGetFormFieldBorderColorType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBorderColorType" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldBorderProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBorderProperty" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iPropKey As Long) As Double
Public Declare Function DPLGetFormFieldBorderStyle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBorderStyle" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldBound LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldBound" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iEdge As Long) As Double
Public Declare Function DPLGetFormFieldCaption LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldCaptionA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldCaptionEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldCaptionExA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iStringType As Long) As String
Public Declare Function DPLGetFormFieldCheckStyle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldCheckStyle" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldChildTitle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldChildTitleA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
Public Declare Function DPLGetFormFieldChoiceType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldChoiceType" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldColor LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldColor" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iColorComponent As Long) As Double
Public Declare Function DPLGetFormFieldComb LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldComb" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetFormFieldDefaultValue LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetFormFieldDefaultValueA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As String
